tests/ui/enum-discriminant/generic-self-in-discr-ice.stderr
error: generic parameters may not be used in enum discriminant values
  --> $DIR/generic-self-in-discr-ice.rs:7:9
   |
LL |     X = size_of::<*mut Self>(),
   |         ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

